# SVGEditor

./: CMakeLists.txt  ReadMe.md  res.qrc
src/: main.cpp
src/AttributeManager/: attributemanager.cpp  attributemanager.h  borderstylecombobox.cpp  borderstylecombobox.h
src/CanvasFrame/: canvasframe.cpp  canvasframe.h  graphicsframe.cpp  graphicsframe.h  overlaywidget.cpp  overlaywidget.h  svgframe.cpp  svgframe.h  textframe.cpp  textframe.h
src/Command/: addgraphicscommand.h  addtextcommand.h  command.h  delgraphicscommand.h  deltextcommand.h  movetextcommand.h  setgeometrycommand.h  setgraphicsdatacommand.h  settextcontentcommand.h  settextdatacommand.h
src/Graphics/: config.h  graphics.h  graphicsfactory.h
src/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/MenuManager/: menumanager.cpp  menumanager.h
src/RegeditSettings/: regeditsettings.cpp  regeditsettings.h
